@@ -4,6 +4,9 @@
 	  Allow some use of de on gbz80.
 	* src/z80/gen.c:
 	  gbz80 >> fix.
+	* device/lib/_rrslonglong_rrx_s.c,
+	  device/lib/_rrulonglong_rrx_s.c:
+	  Support functions for shifting long long.
 
 2012-03-28 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>
 
